--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.559.0",
     "pixi.js": "^8.14.3",
